# ChainForge

./: .gitignore  CONTRIBUTOR_GUIDE.md  Dockerfile  GUIDE.md  INSTALL_GUIDE.md  ImageTabletoText.cforge  LICENSE.md  MANIFEST.in  MultiEvalNode.tsx  README.md  Taskfile.yaml  claude_provider.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
MM_examples/: multimodal_OPENAI.cforge
chain-forge/: package-lock.json  package.json
chain-forge/src/: AlertModal.js  App.css  App.js  ControlledTextArea.js  CsvNode.js  EvaluatorNode.js  InspectorNode.js  LLMItemButtonGroup.js  LLMListComponent.js  LLMListItem.js  ListItemComponent.js  NodeLabelComponent.js  PlotLegend.js  PromptNode.js  ScriptNode.js  SettingsButton.js  TemplateHooksComponent.js  TextFieldsNode.js  VisNode.js  index.css  store.js  text-fields-node.css
chainforge/: .python-version  Taskfile.yaml  __init__.py  app.py  chunk_handlers.py  flask_app.py  requirements-lock.txt  requirements.txt  retrieve_handlers.py
chainforge/endpoints/: dalai.py  protocol.py
chainforge_venv/: pyvenv.cfg
evalgen/: add_grades_to_flow.py  dataset.py  fetch_amazon.py  labelingdash.py  readme.md  requirements.txt
examples/: basic-comparison.cforge  chaining-prompts.cforge  prompt-injection-test.cforge
python-backend/: app.py  flask_app.py  requirements.txt  server.py  test.html  test_dalai.py  test_sockets.py
react-server/: package.json
tests/: test_chunking.py  test_retrievers.py  test_vector_store.py
(+473 files in other folders)
