[tool.poetry]
name = "chainforge"
version = "0.1.0"
description = ""
authors = ["Massimiliano Angelino <angmas@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.2"}
flask-cors = "^4.0.0"
requests = "^2.31.0"
openai = "^1.14.0"
urllib3 = "^2.2.1"
anthropic = "^0.20.0"
mistune = "^3.0.2"
google-generativeai = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
